#pragma once

namespace OriginalMath
{

	static class Math
	{
	public:
		static float CosineTheorem90(float a,float b);  //—]Œ·’è—ˆêŠp‚ª‚X‚O‹‚Ìê‡
	};

	struct Vector3
	{
	public:
		float x;
		float y;
		float z;
	};

	struct Vector2
	{
	public:
		float x;
		float y;
	};
};